# geojson_db

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  package-lock.json  package.json  test.js
.github/workflows/: ci.yml
helpers/: test.sh
src/: geo_file.rs  lib.rs
src/geo/: bbox.rs  database.rs  file.rs  index.rs  mod.rs  node.rs  table.rs
testdata/: polygons.geojsonl.br
