[package]
name = "geojson_db"
version = "0.1.0"
authors = ["Michael Kreil <github@michael-kreil.de> (https://github.com/MichaelKreil)"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "1.3.3", default-features = false, features = [] }
geojson = { version = "0.24.1", default-features = false, features = [] }
memmap2 = { version = "0.6.1", default-features = false, features = [] }
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
serde = { version = "1.0.163", default-features = false, features = ["std"] }
